Fixing small layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -249,7 +249,8 @@ a {
   background-color: var(--secondary-color);
   border: 0;
   border-radius: 20px;
-  margin-top: 20px;
+  /* margin-top: 0px; */
+  margin-bottom: 20px;
 }
 
 /* Hero Media Query for Desktops */
@@ -391,17 +392,23 @@ a {
   .about__image-container img {
     width: 100%;
     height: 100%;
-    margin-top: 50px;
+    margin: 0;
+    /* margin-top: 50px; */
   }
 }
 
 /* Skills Page */
 #skills {
   text-align: center;
+  margin-top: 10rem;
 }
 
 .skills__text-heading {
   margin-top: 25px;
+}
+
+.skills__grid {
+  display: grid;
 }
 
 .table__item {
@@ -476,4 +483,42 @@ a {
   width: 100%;
   height: 100%;
   border-radius: 10px;
+}
+
+@media screen and (min-width: 1054px) {
+  #skills {
+    margin-top: 15rem;
+  }
+
+  .skills__grid {
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+  }
+
+  .skills__table {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .text-description {
+    font-size: 25px;
+  }
+
+  #about {
+    /* background-color: #27273c; */
+    padding: 2rem;
+  }
+
+  #skills {
+    /* background-color: #27273c; */
+    padding: 2rem;
+  }
+
+  .table__item {
+    width: 70%;
+  }
 }
